result/subtask05-casting/testcase01.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
> Insert `x` (addr: 1) to scope level 1
/mnt/c/Users/ncc/Desktop/2024-Spring-NCKU-CompilerHW2/input/subtask05-casting/testcase01.cpp:2:11: error:  syntax error
     2 |    int x = 3;
       |          ^
Total lines: 2
